--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ Flask==0.10.1
 Jinja2==2.7.2
 MarkupSafe==0.18
 Werkzeug==0.9.4
+docopt==0.4.0
 gunicorn==18.0
 itsdangerous==0.23
+mandrill==1.0.56
 mongokit==0.9.1.1
 pymongo==2.6.3
+requests==2.3.0
 wsgiref==0.1.2
